✨ Update contact page content and styling; remove footer and adjust navigation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-              <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+              <!-- <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li> -->
             </ul>
           </div>
 
@@ -45,19 +45,16 @@
           <div class="row gx-5 align-items-center justify-content-center">
             <div class="col-lg-8 col-xl-7 col-xxl-6">
               <div class="my-5 text-center text-xl-start">
-                <h1 class="display-5 fw-bolder text-white mb-2">Computer Anything - A place for all your computer needs.</h1>
-                <p class="lead fw-normal text-white-50 mb-4">Build your dream computer, get setup for gaming and development faster than ever before!</p>
+                <h1 class="display-5 fw-bolder text-white mb-2">Computer Anything - All your computer software and hardware needs, in one place.</h1>
+                <p class="lead fw-normal text-white-50 mb-4">Build your dream website, application, or personal computer! From software engineering and database management, to custom PC builds, we do it all!</p>
                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                  <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                  <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://dmurchison.github.io/portfolio_site/#page-top" target="_blank">Visit Developers Personal Site, duncanmurchison.dev</a>
-                </div>
-                <div class="d-sm-flex justify-content-sm-center">
-                  <a class="btn mt-3 btn-primary btn-lg" href="mailto: duncan@computeranything.dev">Contact Directly for any Questions... duncan@computeranything.dev</a>
+                  <a class="btn btn-primary btn-lg px-4 me-sm-3" href="mailto: cpt.anything@gmail.com">Contact Directly for any Questions</a>
+                  <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://dmurchison.github.io/portfolio_site/#page-top" target="_blank">Visit Personal Developer Site</a>
                 </div>
               </div>
             </div>
             <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
-              <img class="img-fluid rounded-3 my-5" src="./computer_anything.jpg" alt="..." />
+              <img class="img-fluid rounded-3 my-5" src="img/cpt_anything_box.jpg" alt="..." />
             </div>
           </div>
         </div>
@@ -104,11 +101,11 @@
               <div class="text-center">
                 <div class="fs-4 mb-4 fst-italic">"Working with Computer Anything has saved me tons of development time Duncan is an excellent Software Engineer and has the ability to see your vision through with you while still getting things done in a surprisingly quick manner."</div>
                 <div class="d-flex align-items-center justify-content-center">
-                  <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                  <!-- <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." /> -->
                   <div class="fw-bold">
-                    Jack Cutrone
+                    Anonymous
                     <span class="fw-bold text-primary mx-1">/</span>
-                    CEO, Easy East and Personal Client of Computer Anything LLC
+                    Personal Client of Computer Anything LLC
                   </div>
                 </div>
               </div>
@@ -124,9 +121,9 @@
               <div class="text-center">
                 <div class="fs-4 mb-4 fst-italic">"When my computer was broken Duncan came over about 10 minutes before I made my decision to buy a new one, he replaced some pieces inside my motherboard with extra computer parts he had. My computer was up and running in about 45 minutes."</div>
                 <div class="d-flex align-items-center justify-content-center">
-                  <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                  <!-- <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." /> -->
                   <div class="fw-bold">
-                    Matthew Fillekes
+                    Anonymous
                     <span class="fw-bold text-primary mx-1">/</span>
                     Personal Client of Computer Anything LLC
                   </div>
@@ -137,42 +134,7 @@
         </div>
       </div>
 
-      <!-- Call to action-->
-      <aside class="bg-primary bg-gradient rounded-3 p-4 p-sm-5 mt-5">
-        <div class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start">
-          <div class="mb-4 mb-xl-0">
-            <div class="fs-3 fw-bold text-white">New products, delivered to you.</div>
-            <div class="text-white-50">Sign up for our newsletter for the latest updates.</div>
-          </div>
-          <div class="ms-xl-4">
-            <div class="input-group mb-2">
-              <input class="form-control" type="text" placeholder="Email address..." aria-label="Email address..." aria-describedby="button-newsletter" />
-              <button class="btn btn-outline-light" id="button-newsletter" type="button">Sign up</button>
-            </div>
-            <div class="small text-white-50">We care about privacy, and will never share your data.</div>
-          </div>
-        </div>
-      </aside>
-
     </main>
-
-
-    <!-- Footer-->
-    <footer class="bg-dark py-4 mt-auto">
-      <div class="container px-5">
-        <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-          <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; https://www.computeranything.dev</div></div>
-          <div class="col-auto">
-            <a class="link-light small" href="#!">Privacy</a>
-            <span class="text-white mx-1">&middot;</span>
-            <a class="link-light small" href="#!">Terms</a>
-            <span class="text-white mx-1">&middot;</span>
-            <a class="link-light small" href="#!">Contact</a>
-          </div>
-        </div>
-      </div>
-    </footer>
-
 
     <!-- Scripts -->
     <!-- Bootstrap core JS-->
