--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <body class="d-flex flex-column">
 
     <main class="flex-shrink-0">
-      
+
       <!-- Navigation-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-5">
@@ -28,7 +28,6 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-              <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
             </ul>
           </div>
         </div>
@@ -40,9 +39,8 @@
           <!-- Contact form-->
           <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
             <div class="text-center mb-5">
-              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
               <h1 class="fw-bolder">Get in touch</h1>
-              <p class="lead fw-normal text-muted mb-0">We'd love to hear from you</p>
+              <p class="lead fw-normal text-muted mb-0">Theres no time like the present to get started on a new project. We're easy to get in touch with and we'll help you figure it out. Just reach out and let's get started! If you can imagine it, we can build it!</p>
             </div>
           </div>
           <!-- Contact cards-->
@@ -52,44 +50,28 @@
                 <i class="bi bi-chat-dots"></i>
               </div>
               <div class="h5 mb-2">Chat with us</div>
-              <p class="text-muted mb-0">Chat live with one of our support specialists.</p>
+              <p class="text-muted mb-0">Join our <a href="https://discord.gg/QXs6p75pcS">discord</a> channel and chat with us live.</p>
             </div>
             <div class="col">
               <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
               <div class="h5">Ask the community</div>
-              <p class="text-muted mb-0">Explore our community forums and communicate with other users.</p>
+              <p class="text-muted mb-0">Follow us on <a href="https://www.facebook.com/people/Computer-Anything/61567372806344/">Facebook</a> and find out more about us.</p>
             </div>
             <div class="col">
-              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-question-circle"></i></div>
-              <div class="h5">Support center</div>
-              <p class="text-muted mb-0">Browse FAQ's and support articles to find solutions.</p>
+              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
+              <div class="h5">Email us</div>
+              <p class="text-muted mb-0">Feel free to email us anytime at cpt.anything@gmail.com</p>
             </div>
             <div class="col">
               <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-telephone"></i></div>
               <div class="h5">Call us</div>
-              <p class="text-muted mb-0">Call us during normal business hours at (555) 892-9403.</p>
+              <p class="text-muted mb-0">Call us during normal business hours at (631) 358-6777</p>
             </div>
           </div>
         </div>
       </section>
 
     </main>
-
-    <!-- Footer-->
-    <footer class="bg-dark py-4 mt-auto">
-      <div class="container px-5">
-        <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-          <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; https://www.computeranything.dev</div></div>
-          <div class="col-auto">
-            <a class="link-light small" href="#!">Privacy</a>
-            <span class="text-white mx-1">&middot;</span>
-            <a class="link-light small" href="#!">Terms</a>
-            <span class="text-white mx-1">&middot;</span>
-            <a class="link-light small" href="#!">Contact</a>
-          </div>
-        </div>
-      </div>
-    </footer>
 
     <!-- SCRIPTS -->
     <!-- Bootstrap core JS-->
@@ -98,6 +80,6 @@
     <script src="js/scripts.js"></script>
     <!-- Bootstrap Form -->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    
+
   </body>
 </html>
