fixed contact page and testimonials

--- a/contact.html
+++ b/contact.html
@@ -22,21 +22,26 @@
       <!-- Navigation-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-5">
+
           <a class="navbar-brand" href="https://dmurchison.github.io/portfolio_site/#page-top" target="_blank">About the Developer</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#features">Features</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#testimonials">Testimonials</a></li>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
           </div>
+
         </div>
       </nav>
 
-      <!-- Page content-->
-      <section class="py-5">
+
+        <!-- Contact Section -->
+      <section class="py-5" id="contact">
         <div class="container px-5">
-          <!-- Contact form-->
           <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
             <div class="text-center mb-5">
               <h1 class="fw-bolder">Get in touch</h1>
@@ -47,25 +52,28 @@
           <div class="row gx-5 row-cols-2 row-cols-lg-4 py-5">
             <div class="col">
               <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
-                <i class="bi bi-chat-dots"></i>
-              </div>
+                <i class="bi bi-discord"></i></div>
               <div class="h5 mb-2">Chat with us</div>
-              <p class="text-muted mb-0">Join our <a href="https://discord.gg/QXs6p75pcS">discord</a> channel and chat with us live.</p>
+              <p class="text-muted mb-0">Join our <a href="https://discord.gg/QXs6p75pcS">Discord</a> channel and chat with us live.</p>
             </div>
             <div class="col">
-              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
+              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+                <i class="bi bi-facebook"></i></div>
               <div class="h5">Ask the community</div>
               <p class="text-muted mb-0">Follow us on <a href="https://www.facebook.com/people/Computer-Anything/61567372806344/">Facebook</a> and find out more about us.</p>
             </div>
             <div class="col">
-              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
-              <div class="h5">Email us</div>
-              <p class="text-muted mb-0">Feel free to email us anytime at cpt.anything@gmail.com</p>
+              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+                <i class="bi bi-youtube"></i></div>
+              <div class="h5">Checkout our videos</div>
+              <p class="text-muted mb-0">Visit our <a href="https://www.youtube.com/@cpt_anything">YouTube channel</a> for coding tutorials and more!</p>
             </div>
             <div class="col">
-              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-telephone"></i></div>
-              <div class="h5">Call us</div>
-              <p class="text-muted mb-0">Call us during normal business hours at (631) 358-6777</p>
+              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+                <i class="bi bi-envelope"></i></div>
+                <div class="h5">Email us</div>
+                <p class="text-muted mb-0"><a href="mailto: cpt.anything@gmail.com"> Click here</a> to email us anytime!</p>
+              </div>
             </div>
           </div>
         </div>
