--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="flex-shrink-0">
 
       <!-- Navigation-->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container px-5">
 
           <a class="navbar-brand" href="https://dmurchison.github.io/portfolio_site/#page-top" target="_blank">About the Developer</a>
@@ -31,8 +31,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
+              <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-              <!-- <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li> -->
             </ul>
           </div>
 
@@ -48,7 +49,7 @@
                 <h1 class="display-5 fw-bolder text-white mb-2">Computer Anything - All your computer software and hardware needs, in one place.</h1>
                 <p class="lead fw-normal text-white-50 mb-4">Build your dream website, application, or personal computer! From software engineering and database management, to custom PC builds, we do it all!</p>
                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                  <a class="btn btn-primary btn-lg px-4 me-sm-3" href="mailto: cpt.anything@gmail.com">Contact Directly for any Questions</a>
+                  <a class="btn btn-primary btn-lg px-4 me-sm-3" href="contact.html">Contact Directly for any Questions</a>
                   <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://dmurchison.github.io/portfolio_site/#page-top" target="_blank">Visit Personal Developer Site</a>
                 </div>
               </div>
@@ -91,31 +92,71 @@
 
           </div>
         </div>
+
+        <!-- Contact Section -->
+        <div class="container px-5">
+          <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+            <div class="text-center mb-5">
+              <h1 class="fw-bolder">Get in touch</h1>
+              <p class="lead fw-normal text-muted mb-0">Theres no time like the present to get started on a new project. We're easy to get in touch with and we'll help you figure it out. Just reach out and let's get started! If you can imagine it, we can build it!</p>
+            </div>
+          </div>
+          <!-- Contact cards-->
+          <div class="row gx-5 row-cols-2 row-cols-lg-4 py-5">
+            <div class="col">
+              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+                <i class="bi bi-discord"></i></div>
+              <div class="h5 mb-2">Chat with us</div>
+              <p class="text-muted mb-0">Join our <a href="https://discord.gg/QXs6p75pcS">Discord</a> channel and chat with us live.</p>
+            </div>
+            <div class="col">
+              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+                <i class="bi bi-facebook"></i></div>
+              <div class="h5">Ask the community</div>
+              <p class="text-muted mb-0">Follow us on <a href="https://www.facebook.com/people/Computer-Anything/61567372806344/">Facebook</a> and find out more about us.</p>
+            </div>
+            <div class="col">
+              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+                <i class="bi bi-youtube"></i></div>
+              <div class="h5">Checkout our videos</div>
+              <p class="text-muted mb-0">Visit our <a href="https://www.youtube.com/@cpt_anything">YouTube channel</a> for coding tutorials and more!</p>
+            </div>
+            <div class="col">
+              <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+                <i class="bi bi-envelope"></i></div>
+                <div class="h5">Email us</div>
+                <p class="text-muted mb-0"><a href="mailto: cpt.anything@gmail.com"> Click here</a> to email us anytime!</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Testimonial section-->
-      <div class="py-5 bg-light">
-        <div class="container px-5 my-5">
-          <div class="row gx-5 justify-content-center">
-            <div class="col-lg-10 col-xl-7">
-              <div class="text-center">
-                <div class="fs-4 mb-4 fst-italic">"Working with Computer Anything has saved me tons of development time Duncan is an excellent Software Engineer and has the ability to see your vision through with you while still getting things done in a surprisingly quick manner."</div>
-                <div class="d-flex align-items-center justify-content-center">
-                  <!-- <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." /> -->
-                  <div class="fw-bold">
-                    Anonymous
-                    <span class="fw-bold text-primary mx-1">/</span>
-                    Personal Client of Computer Anything LLC
+      <section id="testimonials">
+        <!-- Test1 -->
+        <div class="py-5 bg-light">
+          <div class="container px-5 my-5">
+            <div class="row gx-5 justify-content-center">
+              <div class="col-lg-10 col-xl-7">
+                <div class="text-center">
+                  <div class="fs-4 mb-4 fst-italic">"Working with Computer Anything has saved me tons of development time Duncan is an excellent Software Engineer and has the ability to see your vision through with you while still getting things done in a surprisingly quick manner."</div>
+                  <div class="d-flex align-items-center justify-content-center">
+                    <!-- <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." /> -->
+                    <div class="fw-bold">
+                      Tulla Contracting
+                      <span class="fw-bold text-primary mx-1">/</span>
+                      Personal Client of Computer Anything LLC
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="py-5 bg-light">
-        <div class="container px-5 my-5">
+        <!-- Test2 -->
+        <div class="py-5 bg-light">
+          <div class="container px-5 my-5">
           <div class="row gx-5 justify-content-center">
             <div class="col-lg-10 col-xl-7">
               <div class="text-center">
@@ -123,7 +164,7 @@
                 <div class="d-flex align-items-center justify-content-center">
                   <!-- <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." /> -->
                   <div class="fw-bold">
-                    Anonymous
+                    Easy East
                     <span class="fw-bold text-primary mx-1">/</span>
                     Personal Client of Computer Anything LLC
                   </div>
@@ -132,7 +173,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
     </main>
 
