--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
           <button id="theme-toggle" class="theme-toggle-btn" aria-label="Toggle Dark Theme"></button>
           <a class="navbar-brand" href="https://dmurchison.github.io/portfolio_site/#page-top" target="_blank">About the Developer</a>
-          <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             <span class="navbar-toggler-icon"></span>
             <span class="navbar-toggler-icon"></span>
